tests/NormalTests/paczka1/fuzzy1/62801131.err
Error in line 4: S927 S381 35,5
Error in line 19: YXJ37fLVqiG A150 94,0
Error in line 14: cZ43nKX S78 60,2
Error in line 28: notyb S381 0,9
Error in line 27: rCLf S381 10,9
Error in line 34: PyOkBZKYYk S78 82,9
